--- a/graphql-pagination/src/app/home/home.page.html
+++ b/graphql-pagination/src/app/home/home.page.html
@@ -9,11 +9,9 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="small">Github Users</ion-title>
+      <ion-title size="medium">Github Users</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <app-users></app-users>
-  </div>
+  <app-users></app-users>
 </ion-content>
