Added new interfaces IUser and IRepository. Added styles to users list and repositories list. Created a component for users/user and repositories/repository.

--- a/graphql-pagination/src/app/home/home.page.html
+++ b/graphql-pagination/src/app/home/home.page.html
@@ -1,17 +1,8 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      GraphQL-Apollo
-    </ion-title>
-  </ion-toolbar>
+  <ion-item color="primary">
+    <ion-text slot="start">Github Users</ion-text>
+  </ion-item>
 </ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="medium">Github Users</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <app-users></app-users>
 </ion-content>
