Added a filter box in users page.

--- a/graphql-pagination/src/app/users/users.component.html
+++ b/graphql-pagination/src/app/users/users.component.html
@@ -3,6 +3,11 @@
 
     <ion-searchbar [formControl]="searchInput"></ion-searchbar>
 
+    <ion-item>
+      <ion-input [formControl]="filter" slot="start"></ion-input>
+      <ion-button slot="end" (click)="applyFilter()">Filter</ion-button>
+    </ion-item>
+
     <ion-item lines="none">
       <ion-text>
         Results {{currentCount}} of {{totalCount}}
