Applied caching to user repositories.

--- a/graphql-pagination/src/app/repositories/repositories.page.html
+++ b/graphql-pagination/src/app/repositories/repositories.page.html
@@ -4,7 +4,7 @@
       <ion-item slot="end" routerLink routerDirection="back" color="primary">Back</ion-item>
       <ion-text slot="start">Repositories
         <ion-card-subtitle color="secondary">
-          {{login}}
+          {{loginName}}
         </ion-card-subtitle>
       </ion-text>
     </ion-item>
