--- a/graphql-pagination/src/app/users/user/user.component.html
+++ b/graphql-pagination/src/app/users/user/user.component.html
@@ -1,5 +1,5 @@
 <ion-item [routerLink]="['/user',user.name,'repositories']" color="light">
-  <ion-text>
+  <ion-text color="secondary">
     {{user.name}}
   </ion-text>
 </ion-item>
