--- a/graphql-pagination/src/app/repositories/repositories.page.html
+++ b/graphql-pagination/src/app/repositories/repositories.page.html
@@ -10,6 +10,10 @@
     </ion-item>
   </ion-header>
 
+  <ion-item *ngIf="repositories">
+    <ion-input placeholder="Filter current results" [formControl]="searchInput" clearInput></ion-input>
+  </ion-item>
+
   <ion-grid>
 
     <ion-item lines="none">
@@ -19,7 +23,7 @@
     </ion-item>
 
     <ion-col size="12">
-      <ion-list *ngFor="let repository of repositories | async" lines="none">
+      <ion-list *ngFor="let repository of repositories | async |ngSearchPipe:searchText" lines="none">
         <app-repository [repository]="repository"></app-repository>
       </ion-list>
     </ion-col>
