--- a/graphql-pagination/src/app/repositories/repository/repository.component.scss
+++ b/graphql-pagination/src/app/repositories/repository/repository.component.scss
@@ -1,11 +1,17 @@
-@import '../../../global.scss';
-
 ion-item {
   border-top-left-radius: 1rem;
   border-bottom-style: solid;
   border-bottom-color: white;
-  ion-text {
-    color: $secondary;
-    font-style: italic;
-  }
+}
+
+ul {
+  list-style: none;
+}
+
+#name {
+  font-style: bold;
+}
+
+#url {
+  font-style: italic;
 }
