--- a/graphql-pagination/src/app/home/home.page.html
+++ b/graphql-pagination/src/app/home/home.page.html
@@ -6,3 +6,8 @@
 <ion-content [fullscreen]="true">
   <app-users></app-users>
 </ion-content>
+<ion-fab vertical="bottom" horizontal="start" slot="fixed" title="Back to top">
+  <ion-fab-button (click)="backToTop()">
+    <ion-icon name="arrow-up-circle"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
