--- a/graphql-pagination/src/app/repositories/repositories.page.html
+++ b/graphql-pagination/src/app/repositories/repositories.page.html
@@ -34,3 +34,9 @@
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
+
+<ion-fab vertical="bottom" horizontal="start" slot="fixed" title="Back to top">
+  <ion-fab-button (click)="backToTop()">
+    <ion-icon name="arrow-up-circle"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
