Removed inline styles.

--- a/graphql-pagination/src/app/repositories/repository/repository.component.html
+++ b/graphql-pagination/src/app/repositories/repository/repository.component.html
@@ -4,7 +4,7 @@
       <ion-text color="secondary">{{repository?.name}}</ion-text>
     </li>
     <li id="url">
-      <a style="font-size:1rem;" color="medium" (click)="goToUrl()">{{repository?.url}}</a>
+      <a color="medium" (click)="goToUrl()">{{repository?.url}}</a>
     </li>
   </ul>
 </ion-item>
