Transferred graphql.module.ts and queries. Updated code to setup apollo in graphql.module.ts. Refactored variable names.

--- a/graphql-pagination/src/app/users/users.component.html
+++ b/graphql-pagination/src/app/users/users.component.html
@@ -29,7 +29,7 @@
       </ion-text>
       <ion-item slot="end" lines="none">
         <ion-select [formControl]="numberOfResultDropdown" [value]="numberOfResultValue"
-          (ionChange)="numberOfResultValueChanged()" [disabled]="fetchingData || !filter.valid">
+          (ionChange)="numberOfResultValueChanged()">
           <ion-label>Results to show per page</ion-label>
           <ion-select-option *ngFor="let numberOfResult of numberOfResultOptions" [value]="numberOfResult">
             {{numberOfResult}}
